[Add] intervalo de tiempo para que pase a la siguiente imagen del carrusel

--- a/index.html
+++ b/index.html
@@ -133,35 +133,35 @@
               ></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item active" data-bs-interval="3000">
                 <img
                   src="https://media.game.es/CMS/Highlights/nsw2-reserva-ConsolaNSW2-s4925-h.webp"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.hobbyconsolas.com%2Fsites%2Fnavi.axelspringer.es%2Fpublic%2Fstyles%2F1200%2Fpublic%2Fmedia%2Fimage%2F2022%2F06%2Fxbox-one-x-feel-true-power-spot-publicitario-641486.jpg%3Fitok%3DylZMLAso&f=1&nofb=1&ipt=86872f03be4f67c580d4cd3d14797cfab5ffa5b68d60e280cc405df658069e5c&ipo=images"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="https://media.game.es/CMS/Highlights/Ps5-promo-ConsolaPs5AstroBot-s4525-h.webp"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages4.alphacoders.com%2F287%2F287798.jpg&f=1&nofb=1&ipt=1f51a58d2466fbbc5c2ca68722e2ae3d83d14180970ac6938a7c0d90cd1328ce&ipo=images"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <img
                   src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ffs-prod-cdn.nintendo-europe.com%2Fmedia%2Fimages%2F10_share_images%2Fgames_15%2Fnintendo_switch_4%2FH2x1_NSwitch_ARKSurvivalEvolved_image1280w.jpg&f=1&nofb=1&ipt=94b92c582f7f66b40d6708dbcad32ec92347369ea9076ba7b1e2869d4a1a4fbd&ipo=images"
                   class="d-block w-100"
