--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             <ul class="nav navbar-nav navbar-right">
               <li>
                 <div>
-                  <i class="bi bi-cart2 m-2"></i>
+                  <i id="cart" class="bi bi-cart2 m-2"></i>
                 </div>
               </li>
               <li>
                 <div>
-                  <i class="bi bi-person"></i>
+                  <i id="user" class="bi bi-person"></i>
                 </div>
               </li>
             </ul>
@@ -251,6 +251,67 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="container-sm d-flex flex-column align-items-center">
+          <div class="row gy-3">
+            <div class="col-lg-6 col-sm-12 d-flex">
+              <ul class="list">
+                <br />
+                <li>
+                  <a href="#">Términos y condiciones</a>
+                </li>
+                <li>
+                  <a href="#">Política de privacidad </a>
+                </li>
+                <li>
+                  <a href="#">Programa de afiliación</a>
+                </li>
+                <li>
+                  <a href="#">Contacto</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-6 col-sm-12 d-flex">
+              <ul class="list">
+                <li>
+                  <div class="row gy-3">
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-facebook"></i></a>
+                    </div>
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-twitter-x"></i></a>
+                    </div>
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-instagram"></i></a>
+                    </div>
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-youtube"></i></a>
+                    </div>
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-twitch"></i></a>
+                    </div>
+                    <div class="col-sm-2">
+                      <a href="#"><i class="bi bi-threads"></i></a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <a href="#">Sobre nosotros</a>
+                </li>
+                <li>
+                  <a href="#">Trabaja con nosotros</a>
+                </li>
+                <li>
+                  <a href="#">Ayuda</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <p class="text-center">
+            © 2023 Gameshop. Todos los derechos reservados.
+          </p>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
