[ADD] añadido carrusel con productos recomendados y cambiado la forma de identificar los estilos para minimizar errores

--- a/index.html
+++ b/index.html
@@ -250,6 +250,71 @@
             </div>
           </div>
         </div>
+        <div class="container my-5 position-relative">
+          <p class="h2 text-center"><b>Productos recomendados</b></p>
+        <div id="carouselRecommended" class="carousel slide">
+      <div class="carousel-inner">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active">
+          <div class="row justify-content-center">
+            <div class="col-md-5">
+              <div class="card">
+                <img src="https://imagenes.20minutos.es/uploads/imagenes/2025/04/02/nueva-nintendo-switch-2-2.jpeg" class="card-img-top" alt="Producto 1">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Nintendo Switch 2</h5>
+                  <p class="card-text">469,99€</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="card">
+                <img src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AA1Ce9t0.img?w=768&h=430&m=6" class="card-img-top" alt="Producto 2">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Mario Kart World</h5>
+                  <p class="card-text">89,99€</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item">
+          <div class="row justify-content-center">
+            <div class="col-md-5">
+              <div class="card">
+                <img src="https://gaming-cdn.com/images/products/18808/616x353/r-e-p-o-pc-juego-steam-cover.jpg?v=1741085446" class="card-img-top" alt="Producto 3">
+                <div class="card-body text-center">
+                  <h5 class="card-title">R.E.P.O</h5>
+                  <p class="card-text">9,75€</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="card">
+                <img src="https://www.citytel.bg/uploads/com_article/gallery/846e283ce13b72f09aa08fa2a964f1c65f8da29f.jpg" class="card-img-top" alt="Producto 4">
+                <div class="card-body text-center">
+                  <h5 class="card-title">PlayStation 5 Edición Digital</h5>
+                  <p class="card-text">399,99 €</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Controles del Carrusel (fuera del área de cards) -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecommended" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselRecommended" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
       </div>
       <footer>
         <div class="container-sm d-flex flex-column align-items-center">
