[Fix] cambio en el carrusel recomendados

--- a/index.html
+++ b/index.html
@@ -255,7 +255,6 @@
         <div id="carouselRecommended" class="carousel slide">
       <div class="carousel-inner">
 
-        <!-- Slide 1 -->
         <div class="carousel-item active">
           <div class="row justify-content-center">
             <div class="col-md-5">
@@ -279,7 +278,6 @@
           </div>
         </div>
 
-        <!-- Slide 2 -->
         <div class="carousel-item">
           <div class="row justify-content-center">
             <div class="col-md-5">
@@ -293,7 +291,7 @@
             </div>
             <div class="col-md-5">
               <div class="card">
-                <img src="https://www.citytel.bg/uploads/com_article/gallery/846e283ce13b72f09aa08fa2a964f1c65f8da29f.jpg" class="card-img-top" alt="Producto 4">
+                <img src="https://media.game.es/COVERV2/3D_L/241/241293.png" class="card-img-top" alt="Producto 4">
                 <div class="card-body text-center">
                   <h5 class="card-title">PlayStation 5 Edición Digital</h5>
                   <p class="card-text">399,99 €</p>
@@ -305,7 +303,6 @@
 
       </div>
 
-      <!-- Controles del Carrusel (fuera del área de cards) -->
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecommended" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
         <span class="visually-hidden">Anterior</span>
