--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           </div>
         
           <div class="container">
-            <div class="row justify-content-center gy-4">
+            <div class="row justify-content-center gy-4 gx-1">
               <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
                 <div class="card text-center" >
                   <img src="https://icon-library.com/images/display-icon/display-icon-10.jpg" class="card-img-top" alt="PC">
