--- a/index.html
+++ b/index.html
@@ -240,6 +240,68 @@
             </div>
           </div>
         </div>
+
+        <div class="container px-4 pt-5 pb-3">
+          <p class="h2 text-center"><b>Ofertas y novedades</b></p>
+          <div class="row mt-3 d-flex  justify-content-center">
+            <div class="col-md-6 text-center">
+              <div id="crdLarge" class="card">
+                <img src="https://wallpapercave.com/wp/wp7351915.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Chanchito feliz</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 text-center">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div id="crdsmall1" class="card" >
+                    <img src="https://wallpapercave.com/wp/wp7351915.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Chanchito feliz</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div id="crdsmall2" class="card " >
+                    <img src="https://wallpapercave.com/wp/wp7351915.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Chanchito feliz</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-6">
+                  <div id="crdsmall3" class="card" >
+                    <img src="https://wallpapercave.com/wp/wp7351915.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Chanchito feliz</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div id="crdsmall4" class="card" >
+                    <img src="https://wallpapercave.com/wp/wp7351915.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Chanchito feliz</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="container my-5 position-relative">
           <p class="h2 text-center"><b>Productos recomendados</b></p>
 
