--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
                   class="card-img-top"
                   alt="..."
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-end align-items-center">
                   <h5 class="card-title">Chanchito feliz</h5>
                   <p class="card-text">
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                 </div>
               </div>
             </div>
@@ -275,34 +275,26 @@
                 <div class="col-sm-6">
                   <div id="crdsmall1" class="card">
                     <img
-                      src="https://wallpapercave.com/wp/wp7351915.jpg"
+                      src="https://gaming-cdn.com/images/products/13298/616x353/the-last-of-us-part-i-pc-juego-steam-europe-cover.jpg?v=1694611488"
                       class="card-img-top"
                       alt="..."
                     />
-                    <div class="card-body">
-                      <h5 class="card-title">Chanchito feliz</h5>
-                      <p class="card-text">
-                        Some quick example text to build on the card title and
-                        make up the bulk of the card's content.
-                      </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card-body d-flex flex-column justify-content-end align-items-center">
+                      <h5 class="card-title">The Last of Us</h5>
+                      <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div id="crdsmall2" class="card">
                     <img
-                      src="https://wallpapercave.com/wp/wp7351915.jpg"
+                      src="https://gaming-cdn.com/images/products/722/616x353/goat-simulator-pc-mac-juego-steam-cover.jpg?v=1705326622"
                       class="card-img-top"
                       alt="..."
                     />
-                    <div class="card-body">
-                      <h5 class="card-title">Chanchito feliz</h5>
-                      <p class="card-text">
-                        Some quick example text to build on the card title and
-                        make up the bulk of the card's content.
-                      </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card-body d-flex flex-column justify-content-end align-items-center">
+                      <h5 class="card-title">Goat Simulator</h5>
+                      <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                     </div>
                   </div>
                 </div>
@@ -311,17 +303,13 @@
                 <div class="col-sm-6">
                   <div id="crdsmall3" class="card">
                     <img
-                      src="https://wallpapercave.com/wp/wp7351915.jpg"
+                      src="https://gaming-cdn.com/images/products/7325/616x353/god-of-war-pc-juego-steam-cover.jpg?v=1683627071"
                       class="card-img-top"
                       alt="..."
                     />
-                    <div class="card-body">
-                      <h5 class="card-title">Chanchito feliz</h5>
-                      <p class="card-text">
-                        Some quick example text to build on the card title and
-                        make up the bulk of the card's content.
-                      </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card-body d-flex flex-column justify-content-end align-items-center">
+                      <h5 class="card-title">God of War</h5>
+                      <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                     </div>
                   </div>
                 </div>
@@ -332,13 +320,9 @@
                       class="card-img-top"
                       alt="..."
                     />
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column justify-content-end align-items-center">
                       <h5 class="card-title">Chanchito feliz</h5>
-                      <p class="card-text">
-                        Some quick example text to build on the card title and
-                        make up the bulk of the card's content.
-                      </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                     </div>
                   </div>
                 </div>
