--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
+              id="logo"
               src="images/logo.png"
               alt="Logo"
               width="65"
